add logo and fa's

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Responsive HTML5 Resume/CV Template for Developers">
     <meta name="author" content="Xiaoying Riley at 3rd Wave Media">    
-    <link rel="shortcut icon" href="favicon.ico">  
+    <!--<link rel="shortcut icon" href="favicon.ico"> -->
+    <link rel="shortcut icon" href="logo.gif">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,400italic,300italic,300,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
     <!-- Global CSS -->
     <link rel="stylesheet" href="assets/plugins/bootstrap/css/bootstrap.min.css">   
@@ -25,7 +26,7 @@
     <div class="wrapper">
         <div class="sidebar-wrapper">
             <div class="profile-container">
-                <img class="profile" src="assets/images/bb.gif" alt="" />
+                <img class="profile" src="assets/images/bb.gif" alt="profile" />
                 <h1 class="name">Zhiya Zuo</h1>
                 <h3 class="tagline">PhD Student in Information Science</h3>
             </div><!--//profile-container-->
@@ -41,7 +42,7 @@
                 </ul>
             </div><!--//contact-container-->
             <div class="education-container container-block">
-                <h2 class="container-block-title">Education</h2>
+                <h2 class="container-block-title"><i class="fa fa-graduation-cap"></i> Education</h2>
                 <div class="item">
                     <h4 class="degree">Ph.D. in Information Science</h4>
                     <h5 class="meta">University of Iowa, U.S.A.</h5>
@@ -55,7 +56,7 @@
             </div><!--//education-container-->
             
             <div class="languages-container container-block">
-                <h2 class="container-block-title">Languages</h2>
+                <h2 class="container-block-title"><i class="fa fa-language"></i> Languages</h2>
                 <ul class="list-unstyled interests-list">
                     <li>Mandarin <span class="lang-desc"><span class="label label-success">Native</span></span></li>
                     <li>Cantonese <span class="lang-desc"><span class="label label-success">Native</span></span></li>
@@ -64,7 +65,7 @@
             </div><!--//interests-->
             
             <div class="interests-container container-block">
-                <h2 class="container-block-title">Interests</h2>
+                <h2 class="container-block-title"><i class="fa fa-heart"></i> Interests</h2>
                 <ul class="list-unstyled interests-list">
                     <li>Sleeping</li>
                     <li>Skiing</li>
@@ -172,7 +173,7 @@
                     </div><!--//item-->
 
                     <div class="item">
-                        <h3 class="level-title">AngularJS</h3>
+                        <h3 class="level-title">JavaScript (AngularJS)</h3>
                         <div class="level-bar">
                             <div class="level-bar-inner" data-level="40%">
                             </div>                                      
