add reviewer section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                     <li class="twitter"><i class="fa fa-facebook"></i><a href="https://www.facebook.com/zhiyzuo" target="_blank">@zhiyzuo</a></li>
                 </ul>
             </div><!--//contact-container-->
+
             <div class="education-container container-block">
                 <h2 class="container-block-title"><i class="fa fa-graduation-cap"></i> Education</h2>
                 <div class="item">
@@ -133,7 +134,7 @@
                 <h2 class="section-title"><i class="fa fa-file-text"></i>Papers</h2>
                 <div class="item">
                     <div class="meta">
-                        <ul>
+                        <ul style="padding-left:1pc;">
                             <li>Research Collaborations in Multidisciplinary Institutions -- a Case Study of iSchools. Accepted by BigScholar Workshop at WWW2016</li>
                             <li>Network Analysis of Supply Chain Adaptation for Disruption Recovery: An Empirically Grounded Complex Adaptive Systems Approach. Under review.</li>
                             <li>The State and Evolution of U.S. iSchools: from Talent Acquisitions to Research Outcome. Under review.</li> 
@@ -142,6 +143,46 @@
                 </div>
 
             </section><!--//section-->
+
+            <section class="section experiences-section">
+                <h2 class="section-title"><i class="fa fa-pencil"></i>Professional Service</h2>
+
+                <div class="item">
+                    <div class="meta">
+                        <h3 class="job-title">Subreviewer</h3>
+                        <ul style=" list-style:none; padding-left:0;">
+                            <li type="disc" class="indent">2016 20th Pacific Asia Conference on Information Systems</li>
+                            <li type="disc" class="indent">2016 International Conference on Social Computing, Behavioral-Cultural Modeling, Prediction and Behavior Representation in Modeling and Simulation</li>
+                            <li type="disc" class="indent">2016 The Third WWW Workshop on Big Scholarly Data</li>
+                            <li type="disc" class="indent">2015 International Conference for Smart Health</li>
+                            <li type="disc" class="indent">2015 9th China Summer Workshop on Information Management</li>
+                            <li type="disc" class="indent">Computers in Biology and Medicine (Journal) </li>
+                        </ul>
+
+                        <h3 class="job-title">Reviewer</h3>
+                        <ul style=" list-style:none; padding-left:0;">
+                            <li type="disc" class="indent">Journal of Operations Management (Special Issue: A Complex Adaptive Systems Paradigm for Operations &amp; Supply Chain Issues)</li>
+                        </ul>
+                    </div><!--//details-->
+                </div><!--//item-->
+            </section><!--//section-->
+
+
+            <section class="section experiences-section">
+                <h2 class="section-title"><i class="fa fa-wrench"></i>Packages</h2>
+
+                <div class="item">
+                    <div class="meta">
+                        <ul style=" list-style:none; padding-left:0;">
+                            <li><a href="http://zhiyzuo.github.io/python-scopus" target="_blank">PyScopus</a>: A Python Wrapper for <a href="http://dev.elsevier.com/index.html" target="_blank">Scopus API</a></li>
+                            <br>
+                            <li><a href="https://github.com/zhiyzuo/simpleLDA" target="_blank">SimpleLDA</a>: A simple implementation of Latetn Dirichlet Allocation in R</li>
+                        </ul>
+                    </div><!--//details-->
+                </div><!--//item-->
+
+            </section><!--//section-->
+
             
             <section class="skills-section section">
                 <h2 class="section-title"><i class="fa fa-rocket"></i>Programming Skills</h2>
