modify bigscholar citation

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <div class="item">
                     <div class="meta">
                         <ul style="padding-left:1pc;">
-                            <li>Research Collaborations in Multidisciplinary Institutions -- a Case Study of iSchools. Accepted by BigScholar Workshop at WWW2016</li>
+                            <li>Zhiya Zuo, Xi Wang, David Eichmann, and Kang Zhao. 2016. Research Collaborations in Multidisciplinary Institutions: a Case Study of iSchools. In Proceedings of the 25th International Conference Companion on World Wide Web (WWW '16 Companion). International World Wide Web Conferences Steering Committee, Republic and Canton of Geneva, Switzerland, 443-448. DOI=http://dx.doi.org/10.1145/2872518.2890522</li>
                             <li>Network Analysis of Supply Chain Adaptation for Disruption Recovery: An Empirically Grounded Complex Adaptive Systems Approach. Under review.</li>
                             <li>The State and Evolution of U.S. iSchools: from Talent Acquisitions to Research Outcome. Under review.</li> 
                         </ul>
