--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <li class="linkedin"><i class="fa fa-linkedin"></i><a href="http://www.linkedin.com/in/zhiyzuo" target="_blank">linkedin.com/in/zhiyzuo</a></li>
                     <li class="github"><i class="fa fa-github"></i><a href="http://github.com/zhiyzuo" target="_blank">github.com/zhiyzuo</a></li>
                     <li class="twitter"><i class="fa fa-facebook"></i><a href="https://www.facebook.com/zhiyzuo" target="_blank">@zhiyzuo</a></li>
+                    <li class="website"><i class="fa fa-file-text-o"></i><a href="./zuo_cv_JAN_2017.pdf" target="_blank">View CV</a></li>
                 </ul>
             </div><!--//contact-container-->
 
@@ -81,8 +82,7 @@
             <section class="section summary-section">
                 <h2 class="section-title"><i class="fa fa-user"></i>Greetings</h2>
                 <div class="summary">
-                    <p>Hello! I am a 2nd-Year PhD student in Information Science at the University of Iowa, under the supervision of <a href='http://kangzhao.net', target='_blank'>Prof. Kang Zhao</a>. My research interests are text mining and social network analysis. Specifically, I am interested in science of team science and web of scholars. I am also involved in a project on supply chain network. </p>
-                    <p>Kindly note that this website is still under construction. Hopefully I can get it done soon <img src="http://twemoji.maxcdn.com/72x72/1f61b.png" style="width:20px;height:20px;"></img></p>
+                    <p>I am a 3rd-Year PhD student in Information Science at the University of Iowa, under the supervision of <a href='http://kangzhao.net', target='_blank'>Prof. Kang Zhao</a>. My research interests are text mining and social network analysis. Specifically, I am interested in science of science and web of scholars. I am also involved in a project on supply chain network. </p>
                 </div><!--//summary-->
             </section><!--//section-->
             
@@ -98,7 +98,7 @@
                         <!--<div class="company">Earch</div>-->
                     </div><!--//meta-->
                     <div class="details">
-                        <p>Interdisciplinarity has been a very popular concept, especially for research institutions and funding agencies. While there are many many ways to measure the level of interdisciplinarity, there are just too many variables to control. In this study, we are especially interested in the interdisciplinarity of collaborations in multidisciplinary environments. Again, we use U.S. iSchools, which are perfect case study here due to its multidisciplinary nature. We first inspect the level of collaborations within each iSchool. Next we propose two types of multidsiciplinarities: educational and research. We then correlate the two metrics with the level of colalboration. Finally, we measure collaboration interdisciplinarity in a network context and correlate this with multidisciplinarity.</p>  
+                        <p>There are growing trends in the prevalence of research collaborations. In this study, we are especially interested in two dimensions of prevalence and  interdisciplinarity of collaborations in multidisciplinary environments -- those that have faculty members from various backgrounds. U.S. iSchools, policy schools, and neuroscience departments are used as case studies, which are perfect case study here due to their multidisciplinary nature. We first propose two types of multidsiciplinarities: educational and research. Ordinary least square regression was applied to examine the correlation with the prevalence of colalboration. Finally, we measure collaboration interdisciplinarity in a network context and find its relationship with multidisciplinarity using OLS regression model.</p>  
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -111,7 +111,7 @@
                         <!--<div class="company">Earch</div>-->
                     </div><!--//meta-->
                     <div class="details">
-                        <p>It is very important for managers to understand the propagation of disruptions in their firms' supply networks to minimize possible losses. Our research aims at 1) understanding the flow of disruptions; 2) proposing a network-topology-based metric of disruption propagation; 3) introducing proactive re-wiring strategies for individual firms. The data we used is from <a href="http://www.mergentonline.com/" target="_blank">Mergent Online</a>. Concretely, 2971 firms are collected, along with their supply-demand and competition relationship. An agent-based model is designed and multiple simulations were run to answer our research questions.</p>  
+                        <p>It is very important for managers to understand the propagation of disruptions in their firms' supply networks to minimize possible losses. Our research aims at 1) understanding the flow of disruptions; 2) proposing a network-topology-based metric of disruption propagation; 3) introducing proactive re-wiring strategies for individual firms. The data we used is from <a href="http://www.mergentonline.com/" target="_blank">Mergent Online</a>. Specifically, 2971 firms are collected, along with their supply-demand and competition relationship. An agent-based model is designed and multiple simulations were run to answer our research questions.</p>  
                     </div><!--//details-->
                 </div><!--//item-->
 
@@ -135,9 +135,10 @@
                 <div class="item">
                     <div class="meta">
                         <ul style="padding-left:1pc;">
+                            <li>Zuo, Z., Zhao, K. and Eichmann, D. (2016), The state and evolution of U.S. iSchools: from talent acquisitions to research outcome. Journal of the Association for Information Science and Technology. doi:10.1002/asi.23751</li>
+                            <li>Wang, X., Zuo, Z., Zhang, Y., Zhao, K., Chang, Y. C., &amp; Chou, C. S. (2016). Investigating Regional Prejudice in China Through the Lens of Weibo. In International Conference on Social Informatics (pp. 500-513). Springer International Publishing.</li>
                             <li>Zhiya Zuo, Xi Wang, David Eichmann, and Kang Zhao. 2016. Research Collaborations in Multidisciplinary Institutions: a Case Study of iSchools. In Proceedings of the 25th International Conference Companion on World Wide Web (WWW '16 Companion). International World Wide Web Conferences Steering Committee, Republic and Canton of Geneva, Switzerland, 443-448. DOI=http://dx.doi.org/10.1145/2872518.2890522</li>
-                            <li>Network Analysis of Supply Chain Adaptation for Disruption Recovery: An Empirically Grounded Complex Adaptive Systems Approach. Under review.</li>
-                            <li>The State and Evolution of U.S. iSchools: from Talent Acquisitions to Research Outcome. Under review.</li> 
+                            <li>Network Analysis of Supply Chain Adaptation for Disruption Recovery: An Empirically Grounded Complex Adaptive Systems Approach. 2nd Round review.</li>
                         </ul>
                     </div>
                 </div>
@@ -149,19 +150,23 @@
 
                 <div class="item">
                     <div class="meta">
-                        <h3 class="job-title">Subreviewer</h3>
+                        <h3 class="job-title">Conference/Workshop Reviewer</h3>
                         <ul style=" list-style:none; padding-left:0;">
-                            <li type="disc" class="indent">2016 20th Pacific Asia Conference on Information Systems</li>
-                            <li type="disc" class="indent">2016 International Conference on Social Computing, Behavioral-Cultural Modeling, Prediction and Behavior Representation in Modeling and Simulation</li>
-                            <li type="disc" class="indent">2016 The Third WWW Workshop on Big Scholarly Data</li>
-                            <li type="disc" class="indent">2015 International Conference for Smart Health</li>
+                            <li type="disc" class="indent">China Summer Workshop on Information Management (CSWIM)</li>
+                            <li type="disc" class="indent">Hawaii International Conference on System Sciences (HICSS)</li>
+                            <li type="disc" class="indent">International Conference on Information Systems (ICIS)</li>
+                            <li type="disc" class="indent">International Conference on Smart Health (ICSH)</li>
+                            <li type="disc" class="indent">Pacific Asia Conference on Information Systems (PACIS)</li>
+                            <li type="disc" class="indent">International Conference on Social Computing, Behavioral-Cultural Modeling, Predic- tion and Behavior Representation in Modeling and Simulation (SBP-BRiMS)</li>
+                            <li type="disc" class="indent">Workshop on Information Technology and Systems (WITS)</li>
                             <li type="disc" class="indent">2015 9th China Summer Workshop on Information Management</li>
-                            <li type="disc" class="indent">Computers in Biology and Medicine (Journal) </li>
+                            <li type="disc" class="indent">WWW Workshop on Big Scholarly Data (BigScholar)</li>
                         </ul>
 
-                        <h3 class="job-title">Reviewer</h3>
+                        <h3 class="job-title">Journal Reviewer</h3>
                         <ul style=" list-style:none; padding-left:0;">
-                            <li type="disc" class="indent">Journal of Operations Management (Special Issue: A Complex Adaptive Systems Paradigm for Operations &amp; Supply Chain Issues)</li>
+                            <li type="disc" class="indent">Computers in Biology and Medicine</li>
+                            <li type="disc" class="indent">Journal of Operations Management</li>
                         </ul>
                     </div><!--//details-->
                 </div><!--//item-->
@@ -240,13 +245,16 @@
                 </div>  
 
             </section><!--//skills-section-->
+
             
         </div><!--//main-body-->
     </div>
+
  
     <footer class="footer">
         <div class="text-center">
                 <!--/* This template is released under the Creative Commons Attribution 3.0 License. Please keep the attribution link below when using for your own project. Thank you for your support. :) If you'd like to use the template without the attribution, you can check out other license options via our website: themes.3rdwavemedia.com */-->
+                <big class="copyright">Last updated in Jan. 2017</big> <br><br>
                 <small class="copyright">Designed with <i class="fa fa-heart"></i> by <a href="http://themes.3rdwavemedia.com" target="_blank">Xiaoying Riley</a> for developers</small>
         </div><!--//container-->
     </footer><!--//footer-->
